@@ -1060,15 +1060,6 @@ class cached_property(object):
         return value
 
 
-def lazy_property(func, name=None, doc=None):
-    """Backwards compatibility interface."""
-    from warnings import warn
-    warn(DeprecationWarning('lazy_property is now called cached_property '
-                            'because it reflects the purpose better.  With '
-                            'Werkzeug 0.3 the old name will be unavailable'))
-    return cached_property(func, name, doc)
-
-
 class _DictAccessorProperty(object):
     """
     Baseclass for `environ_property` and `header_property`.
